📱 fixed white body overflow styling issue for mobile 📱

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ----------      Universal       ---------- */
+/* ----------      Universal       ---------- */
+/* ----------      Universal       ---------- */
+
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+}
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom right, #fae8ff, #bfdbfe);
+    z-index: -1;
+}
+
+/* ----------      FONTS       ---------- */
+/* ----------      FONTS       ---------- */
+/* ----------      FONTS       ---------- */
+
 @import url("https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Dancing+Script");
 
 .grand-hotel {
     font-family: "Grand Hotel", cursive;
+}
+@font-face {
+    font-family: "Raleway";
+    src: url("/fonts/Raleway-VariableFont_wght.ttf") format("truetype");
+    font-style: normal;
 }
 @font-face {
     font-family: "Archivo";
@@ -491,11 +520,6 @@
 }
 
 /* -------------       first-time-client       ------------- */
-
-body,
-html {
-    /* overflow: hidden; */
-}
 
 .custom-checkbox {
     position: relative;
